--- a/resources/sass/_login.scss
+++ b/resources/sass/_login.scss
@@ -1,26 +1,20 @@
-// Pulling these images from Unsplash
-// Toshi the dog from https://unsplash.com/@charlesdeluvio - what a funny dog...
-
 body.bg-login {
   background-color: $gray-100;
 }
 
 .bg-login-image {
-  background: url('images/login--splash-login.jpg');
-  background-position: center;
-  background-size: cover;
+    background: url('../images/login--splash-login.jpg') center;
+    background-size: cover;
 }
 
 .bg-register-image {
-  background: url('images/login--splash-register.jpg');
-  background-position: center;
-  background-size: cover;
+    background: url('../images/login--splash-register.jpg') center;
+    background-size: cover;
 }
 
 .bg-password-image {
-  background: url('https://source.unsplash.com/oWTW-jNGl9I/600x800');
-  background-position: center;
-  background-size: cover;
+    background: url('https://source.unsplash.com/oWTW-jNGl9I/600x800') center;
+    background-size: cover;
 }
 
 form.user {
