--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -37,7 +37,7 @@ $yiq-contrasted-threshold: 195 !default;
 // Typography
 $body-color: $gray-600 !default;
 
-$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial,
+$font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial,
   sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 $font-weight-light: 300 !default;
@@ -57,7 +57,7 @@ $border-color: darken($gray-200, 2%);
 // Change below variable if the height of the navbar changes
 $topbar-base-height: 4.375rem;
 // Change below variable to change the width of the sidenav
-$sidebar-base-width: 14rem;
+$sidebar-base-width: 18rem;
 // Change below variable to change the width of the sidenav when collapsed
 $sidebar-collapsed-width: 6.5rem;
 
