--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,12 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 // Variables
 @import "variables";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "~sweetalert2/src/sweetalert2";
 
 // Font-Awesome
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
@@ -20,6 +21,7 @@
 @import "dropdowns.scss";
 @import "modals.scss";
 @import "navs.scss";
+@import "sidebar.scss";
 @import "buttons.scss";
 @import "cards.scss";
 @import "charts.scss";
